@@ -1,4 +1,4 @@
-import { HStack, VStack } from '@lib/ui/css/stack'
+import { hStack, HStack, VStack } from '@lib/ui/css/stack'
 import { Text } from '@lib/ui/text'
 import styled from 'styled-components'
 import { useMemo } from 'react'
@@ -24,6 +24,14 @@ import { DataPointInfo } from './DataPointInfo'
 import { useActiveItemIndex } from '@lib/ui/list/ActiveItemIndexProvider'
 import { BarChartItem } from './BarChartItem'
 import { useSelectedIntervalActiveTimeSeries } from './useSelectedIntervalActiveTimeSeries'
+import { useActiveBudget } from '../hooks/useActiveBudget'
+import { useTimeGrouping } from '../timeGrouping/useTimeGrouping'
+import { withoutDuplicates } from '@lib/utils/array/withoutDuplicates'
+import { order } from '@lib/utils/array/order'
+import { borderRadius } from '@lib/ui/css/borderRadius'
+import { getColor } from '@lib/ui/theme/getters'
+import { absoluteOutline } from '@lib/ui/css/absoluteOutline'
+import { PositionAbsolutelyCenterHorizontally } from '@lib/ui/layout/PositionAbsolutelyCenterHorizontally'
 
 const Content = styled.div`
   ${takeWholeSpaceAbsolutely};
@@ -33,19 +41,51 @@ const Content = styled.div`
   align-items: end;
 `
 
+const BudgetOutline = styled.div`
+  ${absoluteOutline(12, 4)};
+  ${borderRadius.s};
+  background: ${getColor('background')};
+  border: 2px solid ${getColor('primary')};
+  z-index: -1;
+`
+
+const BudgetLine = styled.div`
+  width: 100%;
+  height: 1px;
+  border: 1px dashed ${getColor('primary')};
+  z-index: -1;
+  pointer-events: none;
+`
+
+const Container = styled.div`
+  ${hStack()};
+  position: relative;
+  isolation: isolate;
+`
+
 export const TrackedTimeChart = () => {
   const data = useSelectedIntervalActiveTimeSeries()
 
   const [activeIndex, setActiveIndex] = useActiveItemIndex()
 
+  const budget = useActiveBudget()
+
+  const [timeGroup] = useTimeGrouping()
+
+  const showBudget = timeGroup === 'week' && budget !== undefined
+
   const yLabels = useMemo(() => {
-    const hourLabels = generateYLabels({
+    const result = generateYLabels({
       maxValue: convertDuration(Math.max(...data), 's', 'h'),
       stepSizes: [0.25, 0.5, 1, 2, 4, 10, 20, 50, 100, 200, 500, 1000],
-    })
+    }).map((value) => convertDuration(value, 'h', 's'))
 
-    return hourLabels.map((value) => convertDuration(value, 'h', 's'))
-  }, [data])
+    if (showBudget) {
+      return order(withoutDuplicates([...result, budget]), (v) => v, 'asc')
+    }
+
+    return result
+  }, [budget, data, showBudget])
 
   const normalized = normalizeDataArrays({
     data,
@@ -59,7 +99,17 @@ export const TrackedTimeChart = () => {
           <VStack fullWidth gap={20} ref={setElement}>
             {size && (
               <>
-                <HStack>
+                <Container>
+                  {showBudget && (
+                    <PositionAbsolutelyCenterHorizontally
+                      top={toPercents(
+                        1 - normalized.yLabels[yLabels.indexOf(budget)],
+                      )}
+                      fullWidth
+                    >
+                      <BudgetLine />
+                    </PositionAbsolutelyCenterHorizontally>
+                  )}
                   <ChartYAxis
                     expectedLabelWidth={
                       trackedTimeChartConfig.expectedYLabelWidth
@@ -70,6 +120,26 @@ export const TrackedTimeChart = () => {
                       const str = formatDuration(hours, 'h', {
                         maxUnit: 'h',
                       })
+
+                      if (showBudget && yLabels[index] === budget) {
+                        return (
+                          <Text
+                            as="div"
+                            style={{
+                              position: 'relative',
+                              isolation: 'isolate',
+                            }}
+                            key={index}
+                            size={12}
+                            weight="600"
+                            color="contrast"
+                          >
+                            <EmphasizeNumbers value={str} />
+                            <BudgetOutline />
+                          </Text>
+                        )
+                      }
+
                       return (
                         <Text key={index} size={12} color="supporting">
                           <EmphasizeNumbers value={str} />
@@ -122,7 +192,7 @@ export const TrackedTimeChart = () => {
                       )}
                     />
                   </VStack>
-                </HStack>
+                </Container>
 
                 <HStack>
                   <Spacer width={trackedTimeChartConfig.expectedYLabelWidth} />
