@@ -99,9 +99,9 @@ The "Projects" page has three subpages: "Projects," "Plan," and "Report."
 
 On the "Projects" subpage, users can see all their projects and change their status, edit, or delete them. Each project has a name, emoji, color, and a status, which can be "active," "inactive," or "archived." There is one project which can’t be deleted—“Other.” When the user deletes a project, all the data associated with the deleted project will be reassigned to the “Other” project. User can reorder projects by dragging them.
 
-On the "Plan" page, users can budget project time for a week, where the total budgeted time should not exceed the work budget defined on the "Work Budget" page. The user can see the progress of the project budget and the total time spent on the project this week. The user can see the allocation of time, add new budgets, and edit/delete existing project budgets. On top of that, they can set a goal to work "at least X hours" or "no more than X hours" on a project. For example, users may want to work less on some projects, such as their remote job, and more on their business project. Also, they can select if they work on the project "Monday to Friday" or "Everyday." On the side of the page, they can see their progress on the weekly goals for the current week.
+On the "Plan" page, users can budget project time for a week, where the total budgeted time should not exceed the work budget defined on the "Work Budget" page. The user can see the progress of the project budget and the total time spent on the project this week. The user can see the allocation of time, add new budgets, and edit/delete existing project budgets. On top of that, they can set a goal to work "at least X hours" or "no more than X hours" on a project. For example, users may want to work less on some projects, such as their remote job, and more on their business project. Also, they can select if they work on the project "Monday to Friday" or "Everyday." On the side of the page, they can see their progress for the current week.
 
-On the "Report" page, users can track their work time across different projects over a selected period, with options to group data by days, weeks, months, or years. The interval input below the chart allows users to specify a time range, such as June to August, and view a detailed breakdown of time spent on each project. The left panel shows a percentage breakdown of time across projects, and users can click on a project name to filter the chart by that project alone. The chart is color-coded to represent different projects, and hovering over the bars reveals a detailed time distribution for each period. This provides valuable insights into how time is spent, allowing users to adjust priorities and identify work patterns.
+On the "Report" page, users can track their work time across different projects over a selected period, with options to group the data by days, weeks, months, or years. The interval input below the chart allows users to specify a time range, such as June to August, and view a detailed breakdown of time spent on each project. The left panel shows a percentage breakdown of time across projects, and users can click on a project name to filter the chart to display only that project. The chart is color-coded to represent different projects, and hovering over the bars reveals a detailed time distribution for each period. This provides valuable insights into how time is spent, enabling users to adjust priorities and identify work patterns. When the chart is grouped by weeks and the user selects either all projects or a specific project, they will see a line showing the budgeted time for the project, or, in the case of all projects, the total budgeted time.
 
 While the user will primarily track their work through focus sessions, they can also track time by manually adding a focus session from the side timeline on the focus page. There, they can also edit and delete existing sessions.
 
